HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestDuplicateName/Expected.uv
//! Expected diagnostic metadata for the TestDuplicateName rejected-source specimen.

expectedDiagnostic("E-TST-0102", "diagnostics.TestAttributes")
expectedDiagnostic("E-TST-0102", "def.TestAttributeArgsOk")
